make blurring animation for project cover more smooth, ease-in-out blur effect, and fix project descriptions

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -50,6 +50,7 @@
         position: absolute;
         top:0%;
         border-radius: 2rem;
+        transition: all 0.3s ease-in-out;
     }
 
     &__container {
